--- a/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.ChatMainControl"
+﻿<UserControl xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"  x:Class="SecureIM.ChatGUI.UserControls.ChatMainControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,15 +13,15 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40*" />
             <ColumnDefinition Width="40*" />
-            <ColumnDefinition Width="40*"/>
+            <ColumnDefinition Width="40*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="70*" />
-            <RowDefinition Height="70*"/>
-            <RowDefinition Height="70*"/>
-            <RowDefinition Height="70*"/>
-            <RowDefinition Height="70*"/>
-            <RowDefinition Height="100*"/>
+            <RowDefinition Height="70*" />
+            <RowDefinition Height="70*" />
+            <RowDefinition Height="70*" />
+            <RowDefinition Height="70*" />
+            <RowDefinition Height="100*" />
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <TextBox Name="TxtChatPane"
@@ -41,30 +41,31 @@
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch"
                  Text="{Binding ChatEntry, Mode=TwoWay}"
-                 KeyDown="TextBoxEntryField_OnKeyDown" Grid.ColumnSpan="3" Grid.Column="0" VerticalContentAlignment="Center" />
+                 KeyDown="TextBoxEntryField_OnKeyDown" Grid.ColumnSpan="3" Grid.Column="0"
+                 VerticalContentAlignment="Center" />
         <Button x:Name="BtnGenKeyPair" Content="Generate Key Pair" Margin="25,20" Width="156"
                 Grid.Row="0" Grid.Column="0" Click="BtnGenKeyPair_Click" Height="35" />
         <Button x:Name="BtnGetPubKey" Content="Get Public Key" Margin="25,20" Width="156"
                 Grid.Row="1" Grid.Column="0" Click="BtnGetPubKey_Click" Height="34" />
         <Button x:Name="BtnSetName" Content="Set Name" Margin="25,20" Width="156"
                 Grid.Row="2" Grid.Column="0" Click="BtnSetName_Click" Height="35" />
-        <TextBox x:Name="TxtSetName" Grid.Row="2" Height="33" Margin="40,20"
-                 TextWrapping="Wrap" Text="New Name..." Width="156" FontStyle="Italic"
-                 TextDecorations="{x:Null}" FontSize="10"
-                 Grid.Column="1" />
+        <xctk:WatermarkTextBox x:Name="TxtSetName" Grid.Row="2" Height="33" Margin="40,20"
+                     TextWrapping="Wrap" Width="156" FontStyle="Italic"
+                     TextDecorations="{x:Null}" FontSize="10"
+                     Grid.Column="1" Watermark="New Name..."/>
         <Button x:Name="BtnAddFriend" Content="Add Friend" Margin="25,20" Width="156"
                 Grid.Row="3" Grid.Column="0" Click="BtnAddFriend_Click" Height="36" />
-        <TextBox x:Name="TxtAlias" Grid.Row="3" Height="34" Margin="40,20"
-                 TextWrapping="Wrap" Text="Friend's Alias..." Width="156" FontStyle="Italic"
+        <xctk:WatermarkTextBox x:Name="TxtAlias" Grid.Row="3" Height="34" Margin="40,20"
+                 TextWrapping="Wrap" Watermark="Friend's Alias..." Width="156" FontStyle="Italic"
                  TextDecorations="{x:Null}" FontSize="10"
                  Grid.Column="1" />
-        <TextBox x:Name="TxtFriendPublicKey" Grid.Row="3" Grid.Column="2" Height="34"
-                 Margin="40,20" TextWrapping="Wrap" Text="Friend's Public Key..."
+        <xctk:WatermarkTextBox x:Name="TxtFriendPublicKey" Grid.Row="3" Grid.Column="2" Height="34"
+                 Margin="40,20" TextWrapping="Wrap" Watermark="Friend's Public Key..."
                  Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" />
         <Button x:Name="BtnStartChat" Content="Start New Chat" Margin="25,20" Width="156"
                 Grid.Row="4" Grid.Column="0" Click="BtnAddFriend_Click" Height="34" />
-        <TextBox x:Name="BtnStartChatFriendName" Grid.Row="4" Height="33"
-                 Margin="40,20" TextWrapping="Wrap" Text=" Target Friend's Alias..."
+        <xctk:WatermarkTextBox x:Name="BtnStartChatFriendName" Grid.Row="4" Height="33"
+                 Margin="40,20" TextWrapping="Wrap" Watermark=" Target Friend's Alias..."
                  Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10"
                  Grid.Column="1" />
     </Grid>
