--- a/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"  x:Class="SecureIM.ChatGUI.UserControls.ChatMainControl"
+﻿<UserControl xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             x:Class="SecureIM.ChatGUI.UserControls.ChatMainControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,8 +9,12 @@
              d:DataContext="{d:DesignInstance tabClasses:TabChatMain}"
              d:DesignHeight="500"
              d:DesignWidth="700"
-             mc:Ignorable="d" MinWidth="700" MinHeight="500">
-    <Grid MinWidth="700" MinHeight="500">
+             mc:Ignorable="d"
+             MinWidth="700"
+             MinHeight="500">
+    <Grid MinWidth="700"
+          MinHeight="500"
+          UseLayoutRounding="True">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40*" />
             <ColumnDefinition Width="40*" />
@@ -24,49 +29,165 @@
             <RowDefinition Height="100*" />
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
-        <TextBox Name="TxtChatPane"
+
+        <Rectangle Margin="5,0"
+                   Width="699"
+                   Grid.ColumnSpan="3"
+                   Grid.Row="2"
+                   Fill="#FF959595"
+                   UseLayoutRounding="True" />
+
+
+        <Rectangle Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
+                   Margin="5"
+                   Grid.RowSpan="2"
+                   Width="699"
+                   Grid.ColumnSpan="3"
+                   Grid.Row="3"
+                   UseLayoutRounding="True" />
+
+
+        <Rectangle Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
+                   Margin="5"
+                   Grid.RowSpan="2"
+                   Width="699"
+                   Grid.ColumnSpan="3"
+                   UseLayoutRounding="True" />
+
+
+        <TextBox x:Name="TxtChatPane"
                  Grid.Row="5"
                  Width="Auto"
                  Margin="10"
                  HorizontalAlignment="Stretch"
                  Grid.ColumnSpan="3"
-                 Text="{Binding ChatHistory , Mode=TwoWay,UpdateSourceTrigger=Explicit}" IsReadOnly="True"
-                 TextWrapping="WrapWithOverflow" TextChanged="TxtChatPane_TextChanged"
-                 IsVisibleChanged="TxtChatPane_IsVisibleChanged" VerticalScrollBarVisibility="Auto"
-                 VerticalContentAlignment="Bottom" Padding="0,10,0,0" ScrollViewer.CanContentScroll="True" Height="87" />
-        <TextBox Name="TxtEntryField"
+                 Text="{Binding ChatHistory, Mode=TwoWay, UpdateSourceTrigger=Explicit}"
+                 IsReadOnly="True"
+                 TextWrapping="WrapWithOverflow"
+                 TextChanged="TxtChatPane_TextChanged"
+                 IsVisibleChanged="TxtChatPane_IsVisibleChanged"
+                 VerticalScrollBarVisibility="Auto"
+                 VerticalContentAlignment="Bottom"
+                 Padding="0,10,0,0"
+                 ScrollViewer.CanContentScroll="True"
+                 Height="87"
+                 UseLayoutRounding="True" />
+        <TextBox x:Name="TxtEntryField"
                  Grid.Row="6"
                  Width="Auto"
                  Margin="10,0,10,10"
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch"
                  Text="{Binding ChatEntry, Mode=TwoWay}"
-                 KeyDown="TextBoxEntryField_OnKeyDown" Grid.ColumnSpan="3" Grid.Column="0"
-                 VerticalContentAlignment="Center" />
-        <Button x:Name="BtnGenKeyPair" Content="Generate Key Pair" Margin="25,20" Width="156"
-                Grid.Row="0" Grid.Column="0" Click="BtnGenKeyPair_Click" Height="35" />
-        <Button x:Name="BtnGetPubKey" Content="Get Public Key" Margin="25,20" Width="156"
-                Grid.Row="1" Grid.Column="0" Click="BtnGetPubKey_Click" Height="34" />
-        <Button x:Name="BtnSetName" Content="Set Name" Margin="25,20" Width="156"
-                Grid.Row="2" Grid.Column="0" Click="BtnSetName_Click" Height="35" />
-        <xctk:WatermarkTextBox x:Name="TxtSetName" Grid.Row="2" Height="33" Margin="40,20"
-                     TextWrapping="Wrap" Width="156" FontStyle="Italic"
-                     TextDecorations="{x:Null}" FontSize="10"
-                     Grid.Column="1" Watermark="New Name..."/>
-        <Button x:Name="BtnAddFriend" Content="Add Friend" Margin="25,20" Width="156"
-                Grid.Row="3" Grid.Column="0" Click="BtnAddFriend_Click" Height="36" />
-        <xctk:WatermarkTextBox x:Name="TxtAlias" Grid.Row="3" Height="34" Margin="40,20"
-                 TextWrapping="Wrap" Watermark="Friend's Alias..." Width="156" FontStyle="Italic"
-                 TextDecorations="{x:Null}" FontSize="10"
-                 Grid.Column="1" />
-        <xctk:WatermarkTextBox x:Name="TxtFriendPublicKey" Grid.Row="3" Grid.Column="2" Height="34"
-                 Margin="40,20" TextWrapping="Wrap" Watermark="Friend's Public Key..."
-                 Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10" />
-        <Button x:Name="BtnStartChat" Content="Start New Chat" Margin="25,20" Width="156"
-                Grid.Row="4" Grid.Column="0" Click="BtnAddFriend_Click" Height="34" />
-        <xctk:WatermarkTextBox x:Name="BtnStartChatFriendName" Grid.Row="4" Height="33"
-                 Margin="40,20" TextWrapping="Wrap" Watermark=" Target Friend's Alias..."
-                 Width="156" FontStyle="Italic" TextDecorations="{x:Null}" FontSize="10"
-                 Grid.Column="1" />
+                 KeyDown="TextBoxEntryField_OnKeyDown"
+                 Grid.ColumnSpan="3"
+                 Grid.Column="0"
+                 VerticalContentAlignment="Center"
+                 UseLayoutRounding="True" />
+        <Button x:Name="BtnGenKeyPair"
+                Content="Generate Key Pair"
+                Margin="25,20"
+                Width="156"
+                Grid.Row="1"
+                Grid.Column="0"
+                Click="BtnGenKeyPair_Click"
+                Height="35"
+                UseLayoutRounding="True" />
+        <Button x:Name="BtnGetPubKey"
+                Content="Get Public Key"
+                Margin="25,20"
+                Width="156"
+                Grid.Row="1"
+                Grid.Column="1"
+                Click="BtnGetPubKey_Click"
+                Height="34"
+                UseLayoutRounding="True" />
+        <Button x:Name="BtnSetName"
+                Content="Set Name"
+                Margin="25,20"
+                Width="156"
+                Grid.Row="0"
+                Grid.Column="0"
+                Click="BtnSetName_Click"
+                Height="35"
+                UseLayoutRounding="True" />
+        <xctk:WatermarkTextBox x:Name="TxtSetName"
+                               Grid.Row="0"
+                               Height="33"
+                               Margin="40,20"
+                               TextWrapping="Wrap"
+                               Width="156"
+                               FontStyle="Italic"
+                               TextDecorations="{x:Null}"
+                               FontSize="10"
+                               Grid.Column="1"
+                               Watermark="New Name..."
+                               UseLayoutRounding="True" />
+        <Button x:Name="BtnAddFriend"
+                Content="Add Friend"
+                Margin="25,20"
+                Width="156"
+                Grid.Row="3"
+                Grid.Column="0"
+                Click="BtnAddFriend_Click"
+                Height="36"
+                UseLayoutRounding="True" />
+        <xctk:WatermarkTextBox x:Name="TxtAlias"
+                               Grid.Row="3"
+                               Height="34"
+                               Margin="40,20"
+                               TextWrapping="Wrap"
+                               Watermark="Friend's Alias..."
+                               Width="156"
+                               FontStyle="Italic"
+                               TextDecorations="{x:Null}"
+                               FontSize="10"
+                               Grid.Column="1"
+                               UseLayoutRounding="True" />
+        <xctk:WatermarkTextBox x:Name="TxtFriendPublicKey"
+                               Grid.Row="3"
+                               Grid.Column="2"
+                               Height="34"
+                               Margin="40,20"
+                               TextWrapping="Wrap"
+                               Watermark="Friend's Public Key..."
+                               Width="156"
+                               FontStyle="Italic"
+                               TextDecorations="{x:Null}"
+                               FontSize="10"
+                               UseLayoutRounding="True" />
+        <Button x:Name="BtnStartChat"
+                Content="Start New Chat"
+                Margin="25,20"
+                Width="156"
+                Grid.Row="4"
+                Grid.Column="0"
+                Click="BtnAddFriend_Click"
+                Height="34"
+                UseLayoutRounding="True" />
+        <xctk:WatermarkTextBox x:Name="TxtStartChatFriendName"
+                               Grid.Row="4"
+                               Height="33"
+                               Margin="40,20"
+                               TextWrapping="Wrap"
+                               Watermark=" Target Friend's Alias..."
+                               Width="156"
+                               FontStyle="Italic"
+                               TextDecorations="{x:Null}"
+                               FontSize="10"
+                               Grid.Column="1"
+                               UseLayoutRounding="True" />
+        <Label x:Name="LblCurrentName"
+               Content="Anonymous"
+               Margin="10,65"
+               Grid.Row="1"
+               Grid.Column="0"
+               Grid.RowSpan="3"
+               HorizontalContentAlignment="Center"
+               VerticalContentAlignment="Center"
+               FontSize="24"
+               Grid.ColumnSpan="3" />
+
+
     </Grid>
 </UserControl>
