--- a/SecureIM.ChatGUI/view/alternativeViews/PinnedTabExampleWindow.xaml
+++ b/SecureIM.ChatGUI/view/alternativeViews/PinnedTabExampleWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:userControls="clr-namespace:SecureIM.ChatGUI.UserControls"
         xmlns:viewModel="clr-namespace:SecureIM.ChatGUI.ViewModel"
         xmlns:vm="clr-namespace:SecureIM.ChatGUI.ViewModel"
-        Title="PinnedTabExample"
+        Title="SecureIM"
         Width="700"
         Height="600"
         DataContext="{Binding Source={StaticResource Locator},
