--- a/SecureIM.ChatGUI/view/SmartcardStartupWindow.xaml
+++ b/SecureIM.ChatGUI/view/SmartcardStartupWindow.xaml
@@ -1,17 +1,19 @@
-﻿<Window x:Class="SecureIM.ChatGUI.view.SmartcardStartupWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:SecureIM.ChatGUI.view"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="SmartcardStartupWindow"
-        Width="300"
-        Height="150"
-        d:DesignHeight="150"
-        d:DesignWidth="300"
-        ResizeMode="CanMinimize"
-        SizeToContent="WidthAndHeight"
-        mc:Ignorable="d">
+﻿<Window
+    x:Class="SecureIM.ChatGUI.view.SmartcardStartupWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SecureIM.ChatGUI.view"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="SmartcardStartupWindow"
+    Width="300"
+    Height="150"
+    d:DesignHeight="150"
+    d:DesignWidth="300"
+    x:ClassModifier="internal"
+    ResizeMode="CanMinimize"
+    SizeToContent="WidthAndHeight"
+    mc:Ignorable="d">
     <Grid x:Name="grdMain">
 
         <Grid x:Name="grdLabel" Margin="0,0,0,80">
@@ -19,26 +21,28 @@
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <Label x:Name="lblChooseReader"
-                   Grid.Row="0"
-                   Grid.Column="0"
-                   Width="294"
-                   Height="41"
-                   HorizontalAlignment="Right"
-                   VerticalAlignment="Bottom"
-                   HorizontalContentAlignment="Center"
-                   VerticalContentAlignment="Center"
-                   Background="Gainsboro"
-                   BorderThickness="0"
-                   Content="Choose Smartcard Reader"
-                   FontWeight="Bold" />
+            <Label
+                x:Name="lblChooseReader"
+                Grid.Row="0"
+                Grid.Column="0"
+                Width="294"
+                Height="41"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Background="Gainsboro"
+                BorderThickness="0"
+                Content="Choose Smartcard Reader"
+                FontWeight="Bold" />
         </Grid>
         <Grid x:Name="grdList" Margin="0,41,0,0">
 
-            <ListBox x:Name="lstChooseReader"
-                     Grid.Row="0"
-                     Grid.Column="0"
-                     SelectionChanged="lstChooseReader_SelectionChanged" />
+            <ListBox
+                x:Name="lstChooseReader"
+                Grid.Row="0"
+                Grid.Column="0"
+                SelectionChanged="lstChooseReader_SelectionChanged" />
         </Grid>
 
     </Grid>
